--- a/TP3/Compte_rendu/Compte_renduBis.tex
+++ b/TP3/Compte_rendu/Compte_renduBis.tex
@@ -44,7 +44,7 @@ stringstyle=\color{orange},
 \begin{document}
 \maketitle
 \section{Présentation générale}
-- Ce TP a pour but de travailler sur la représentation des arbres en mémoire. Tout d'abord, il fallait créer un arbre en utilisant la représentation lien vertical/horizontal. Puis de vérifier le résultat avec le débuggeur ddd. Ensuite, il fallait afficher cette arbre avec la représentation postfixée. Par la suite, il fallait créer une méthode d'insertion dans l'arbre. Il fallait également créer un autre type d'arbre où chaque noeud possède l'arbre du noeud père à partir de l'arbre de base. Finalement, il fallait afficher la représentation postfixée de ce nouvel arbre.
+- Ce TP a pour but de travailler sur la représentation des arbres en mémoire. Tout d'abord, il fallait créer un arbre en utilisant la représentation lien vertical/horizontal. Puis de vérifier le résultat avec le débuggeur ddd. Ensuite, il fallait afficher cette arbre avec la représentation postfixée. Par la suite, il fallait créer une méthode d'insertion dans l'arbre. Il fallait également créer un autre type d'arbre où chaque noeud possède un pointeur vers le noeud père, à partir de l'arbre de base. Finalement, il fallait afficher la représentation postfixée de ce nouvel arbre.
 \\
 \\
 \underline{- Schéma de base :}
